fixed alignment for cards on small screen

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -20,7 +20,6 @@
   background-size: cover;
   background-position: center;
   height: 150px;
-  width: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
